--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.10",
     "vue-apollo": "^3.0.0",
     "vue-router": "^3.1.3",
+    "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
   },
